Menambah Nama Daerah didalam rumahnya

--- a/edukasi.html
+++ b/edukasi.html
@@ -252,39 +252,40 @@
   <!-- Script -->
   <script>
       const rumahAdatData = {
-      Jawa: [
-        { name: 'Rumah Badui', info: 'Gaya bangunan rumah sangat sederhana, Batu kali digunakan sebagai penahan tanah agar tidak longsor, Jenis rumah panggung.', image: 'https://sketchfab.com/models/129f3e88f50b4cb987b43b207fc61010/embed' },
-        { name: 'Rumah Kebaya', info: 'Pondasi rumah terbuat dari susunan batu alam, Dinding terbuat dari kayu nangka, Atap seperti lipatan kebaya.', image: 'https://sketchfab.com/models/fe89c4efa5c445ed8e742a57ff6dcf37/embed' },
-        { name: 'Rumah Joglo', info: 'Balok yang letaknya paling atas, dianggap "kepala" bangunan, Memiliki 4 pilar penyangga, Jenis rumah joglo atau pendopo.', image: 'https://sketchfab.com/models/285d403781454614b04e97b64454ff73/embed' }
-      ],
-      Sumatera: [
-        { name: 'Rumah KrongBade', info: 'Ruang bawah sebagai penyimpanan bahan pangan. Ruang bawah sebagai aktivitas menenun kain. Jenis rumah panggung.', image: 'https://sketchfab.com/models/8d131cf689a64016aedf96875811c307/embed' },
-        { name: 'Rumah Selaso Jatuh Kembar', info: 'Keseluruhan dibuat dari bahan alam. Hiasan dan bangunan mirip perahu. Difungsikan sebagai balai pertemuan adat.', image: 'https://sketchfab.com/models/528df8a16b7741b983fe0b3ad7dd4038/embed' },
-        { name: 'Rumah Nuwou Sesat', info: 'Atap terbuat dari ilalang/kayu. Umumnya dibuat dekat dengan sungai. Fungsi utama sebagai tempat pertemuan.', image: 'https://sketchfab.com/models/1558ff3c6748414295bb7b8f9efeb96d/embed ' }
-      ],
+        Jawa: [
+    { name: 'Rumah Badui (Banten)', info: 'Gaya bangunan rumah sangat sederhana, Batu kali digunakan sebagai penahan tanah agar tidak longsor, Jenis rumah panggung.', image: 'https://sketchfab.com/models/129f3e88f50b4cb987b43b207fc61010/embed' },
+    { name: 'Rumah Kebaya (Betawi)', info: 'Pondasi rumah terbuat dari susunan batu alam, Dinding terbuat dari kayu nangka, Atap seperti lipatan kebaya.', image: 'https://sketchfab.com/models/fe89c4efa5c445ed8e742a57ff6dcf37/embed' },
+    { name: 'Rumah Joglo (Jawa Tengah & Jawa Timur)', info: 'Balok yang letaknya paling atas, dianggap "kepala" bangunan, Memiliki 4 pilar penyangga, Jenis rumah joglo atau pendopo.', image: 'https://sketchfab.com/models/285d403781454614b04e97b64454ff73/embed' }
+  ],
+   Sumatera: [
+    { name: 'Rumah Krong Bade (Aceh)', info: 'Ruang bawah sebagai penyimpanan bahan pangan. Ruang bawah sebagai aktivitas menenun kain. Jenis rumah panggung.', image: 'https://sketchfab.com/models/8d131cf689a64016aedf96875811c307/embed' },
+    { name: 'Rumah Selaso Jatuh Kembar (Riau)', info: 'Keseluruhan dibuat dari bahan alam. Hiasan dan bangunan mirip perahu. Difungsikan sebagai balai pertemuan adat.', image: 'https://sketchfab.com/models/528df8a16b7741b983fe0b3ad7dd4038/embed' },
+    { name: 'Rumah Nuwou Sesat (Lampung)', info: 'Atap terbuat dari ilalang/kayu. Umumnya dibuat dekat dengan sungai. Fungsi utama sebagai tempat pertemuan.', image: 'https://sketchfab.com/models/1558ff3c6748414295bb7b8f9efeb96d/embed' }
+  ],
       Sulawesi: [
-        { name: 'Rumah Dulohupa', info: 'Kata Dulohupa berarti mufakat. Pilar kayu sebagai hiasan dan lambang. Jenis rumah panggung.', image: 'https://sketchfab.com/models/2883217769ee476c980c8f3367dd5163/embed' },
-        { name: 'Rumah Pewaris', info: 'Secara keseluruhan terbuat dari kayu ulin. Memiliki ukiran-ukiran pada bagian rumah. Jenis rumah panggung.', image: 'https://sketchfab.com/models/74a3c52871584c1b87d1c879c7739f0e/embed' },
-        { name: 'Rumah Tongkonan', info: 'Bahan tidak memiliki unsur logam. Atap dibuat dari injuk atau rumbia. Atap berbentuk perahu terbalik.', image: 'https://sketchfab.com/models/583cec1e58d443b9920fc13414d5049a/embed' }
-      ],
+      { name: 'Rumah Dulohupa (Gorontalo)', info: 'Kata Dulohupa berarti mufakat. Pilar kayu sebagai hiasan dan lambang. Jenis rumah panggung.', image: 'https://sketchfab.com/models/2883217769ee476c980c8f3367dd5163/embed' },
+  { name: 'Rumah Pewaris (Sulawesi Tengah)', info: 'Secara keseluruhan terbuat dari kayu ulin. Memiliki ukiran-ukiran pada bagian rumah. Jenis rumah panggung.', image: 'https://sketchfab.com/models/74a3c52871584c1b87d1c879c7739f0e/embed' },
+  { name: 'Rumah Tongkonan (Sulawesi Selatan)', info: 'Bahan tidak memiliki unsur logam. Atap dibuat dari injuk atau rumbia. Atap berbentuk perahu terbalik.', image: 'https://sketchfab.com/models/583cec1e58d443b9920fc13414d5049a/embed' }
+],
       Kalimantan: [
-        { name: 'Rumah Baloy', info: 'Bahan keseluruhan terbuat dari kayu ulin. Terdapat ukiran khas daerah pesisir. Jenis rumah panggung.', image: 'https://sketchfab.com/models/90bf5d19b3a245e685622b8561d44000/embed' },
-        { name: 'Rumah Istana Kesultanan', info: 'Terbuat murni dari kayu. Arsitektur memadukan unsur melayu dan islam. Warna dinding putih dan warna atap coklat gelap.', image: 'https://sketchfab.com/models/19492b420bf64443877f89091db5cbc2/embed' },
-        { name: 'Rumah Bubungan Tinggi', info: 'Bentuk atap bagian tengah tinggi dan lancip. Tangga naik selalu memiliki jumlah ganjil. Diluar rumah terdapat pagar keliling.', image: 'https://sketchfab.com/models/e7bf39dd73be4f3cbe215140fab80773/embed' }
-      ],
-      Bali: [
-        { name: 'Rumah KrongBade', info: 'Gapura atau gerbang didesain seperti candi. Disebut gerbang terbelah. Terdapat patung di sekitar gapura.', image: 'https://sketchfab.com/models/a1d867e648694191afb9aa33ab1a319f/embed' }
-      ],
-      Papua: [
-        { name: 'Rumah Honai', info: 'Atap terbentuk kerucut dari jerami. Lantai beralaskan tanah. Tidak memiliki jendela.', image: 'https://sketchfab.com/models/666e96defd3c40fc856fc9c81ccb64ef/embed' },
-        { name: 'Rumah Kaki Seribu', info: 'Atap daun jerami. Banyak tiang penopang. Jenis rumah panggung.', image: 'https://sketchfab.com/models/7bd4ef887299486486db672b822958c4/embed' }
-      ],
-      Maluku: [
-        { name: 'Rumah Sasadu', info: 'Bahan alam, kayu, dan daun sagu. Berfungsi untuk tempat pertemuan adat. Berfungsi sebagai tempat tinggal adat suku sasi.', image: 'https://sketchfab.com/models/2c12c93914864ac697066f7a93afe34d/embed' }
-      ],
-      "Nusa Tenggara": [
-        { name: 'Rumah Dalam Loka', info: 'Material rumah adalah kayu dan ijuk. Terdapat 99 tiang penopang. Lambang tahta kesultanan Sumbawa.', image: 'https://sketchfab.com/models/bffb934d5c294740a6488545eab035d2/embed' }
-      ]
+      { name: 'Rumah Baloy (Kalimantan Utara)', info: 'Bahan keseluruhan terbuat dari kayu ulin. Terdapat ukiran khas daerah pesisir. Jenis rumah panggung.', image: 'https://sketchfab.com/models/90bf5d19b3a245e685622b8561d44000/embed' },
+  { name: 'Rumah Istana Kesultanan (Kalimantan Barat)', info: 'Terbuat murni dari kayu. Arsitektur memadukan unsur melayu dan islam. Warna dinding putih dan warna atap coklat gelap.', image: 'https://sketchfab.com/models/19492b420bf64443877f89091db5cbc2/embed' },
+  { name: 'Rumah Bubungan Tinggi (Kalimantan Selatan)', info: 'Bentuk atap bagian tengah tinggi dan lancip. Tangga naik selalu memiliki jumlah ganjil. Diluar rumah terdapat pagar keliling.', image: 'https://sketchfab.com/models/e7bf39dd73be4f3cbe215140fab80773/embed' }
+],
+     Bali: [
+  { name: 'Rumah Krong Bade (Bali)', info: 'Gapura atau gerbang didesain seperti candi. Disebut gerbang terbelah. Terdapat patung di sekitar gapura.', image: 'https://sketchfab.com/models/a1d867e648694191afb9aa33ab1a319f/embed' }
+],
+Papua: [
+  { name: 'Rumah Honai (Papua)', info: 'Atap terbentuk kerucut dari jerami. Lantai beralaskan tanah. Tidak memiliki jendela.', image: 'https://sketchfab.com/models/666e96defd3c40fc856fc9c81ccb64ef/embed' },
+  { name: 'Rumah Kaki Seribu (Papua)', info: 'Atap daun jerami. Banyak tiang penopang. Jenis rumah panggung.', image: 'https://sketchfab.com/models/7bd4ef887299486486db672b822958c4/embed' }
+],
+Maluku: [
+  { name: 'Rumah Sasadu (Maluku Utara)', info: 'Bahan alam, kayu, dan daun sagu. Berfungsi untuk tempat pertemuan adat. Berfungsi sebagai tempat tinggal adat suku sasi.', image: 'https://sketchfab.com/models/2c12c93914864ac697066f7a93afe34d/embed' }
+],
+"Nusa Tenggara": [
+  { name: 'Rumah Dalam Loka (Nusa Tenggara Barat)', info: 'Material rumah adalah kayu dan ijuk. Terdapat 99 tiang penopang. Lambang tahta kesultanan Sumbawa.', image: 'https://sketchfab.com/models/bffb934d5c294740a6488545eab035d2/embed' }
+]
+
     };
 
     const sliderContainer = document.getElementById('sliderContainer');
