--- a/cara-bermain.html
+++ b/cara-bermain.html
@@ -125,7 +125,12 @@
 <body class="animate__animated animate__fadeIn">
 
   <!-- Card Logo di pojok kanan atas -->
-
+  <a href="tentang.html" class="corner-card absolute top-4 right-4">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" class="w-6 h-6">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v18M3 12h18M12 3l6 6M12 3l-6 6M12 21l6-6M12 21l-6-6" />
+    </svg>
+    <span class="ml-2 text-sm font-bold">Tentang</span>
+  </a>
 
   <!-- Konten Utama -->
   <div class="quiz-container text-center animate__animated animate__fadeInUp">
@@ -238,7 +243,7 @@
   <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12H3m0 0l6 6m-6-6l6-6"></path>
   </svg>
-  Back
+  Kembali
 </a>
 
 <script>
