--- a/edukasi.html
+++ b/edukasi.html
@@ -223,12 +223,16 @@
   <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12H3m0 0l6 6m-6-6l6-6"></path>
   </svg>
-  Back
+  Kembali
 </a>
 
 <!-- Slider Container -->
 <div class="slider-container hidden bg-cover bg-center h-40 " id="sliderContainer" style="background-image: url('your-image-url.jpg');">
-  <h1 class="text-2xl text-center font-bold mb-4 bg-blend-darken">Klik untuk melihat rumah</h1>
+  <h1 class="text-2xl text-center font-bold mb-4 text-transparent bg-blue-500   text-white   px-4 py-2  rounded-lg  ">
+    Klik untuk melihat rumah
+  </h1>
+  
+  
   <div class="bg-blue-500">
   <div id="prev" class="arrow-btn prev">&larr;</div>
   <div id="slider" class="slider text-2xl pb-20">
@@ -245,7 +249,7 @@
   <div id="infoModal" class="modal">
     <div class="modal-content">
       <div id="info-container"></div>
-      <button id="closeModal" class="close-btn">Close</button>
+      <button id="closeModal" class="close-btn">Tutup</button>
     </div>
   </div>
 
