--- a/cara-bermain.html
+++ b/cara-bermain.html
@@ -226,8 +226,8 @@
  
     <!-- Navigasi Soal -->
     <div class="mt-8 flex justify-between">
-      <button id="prev-btn" onclick="prevQuestion()" class="btn" disabled>Back</button>
-      <button id="next-btn" onclick="checkAnswer()" class="btn">Next</button>
+      <button id="prev-btn" onclick="prevQuestion()" class="btn" disabled>Sebelummya</button>
+      <button id="next-btn" onclick="checkAnswer()" class="btn">Selanjutnya</button>
     </div>
 
    <!-- Hasil Kuis -->
