--- a/cara-bermain.html
+++ b/cara-bermain.html
@@ -251,7 +251,7 @@
     document.getElementById(`question-${questionNumber}`).classList.remove('hidden');
 
     document.getElementById('prev-btn').disabled = questionNumber === 1;
-    document.getElementById('next-btn').textContent = questionNumber === totalQuestions ? 'Submit' : 'Next';
+    document.getElementById('next-btn').textContent = questionNumber === totalQuestions ? 'Submit' : 'Selanjutnya';
   }
 
   function nextQuestion() {
